--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+deprecation = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
