--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,5 @@
 ---
 repos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: "v0.1.6"
-    hooks:
-      - id: ruff
-        args: ["--fix"]
-      - id: ruff-format
-
-  - repo: https://github.com/adrienverge/yamllint.git
-    rev: "v1.33.0"
-    hooks:
-      - id: yamllint
-
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
@@ -19,3 +7,15 @@ repos:
       - id: check-merge-conflict
       - id: check-toml
       - id: trailing-whitespace
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: "v0.12.11"
+    hooks:
+      - id: ruff-format
+      - id: ruff-check
+        args: ["--fix"]
+
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: "v1.33.0"
+    hooks:
+      - id: yamllint
