--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,30 @@
-[tool.poetry]
+[project]
 name = "wamu"
 version = "0.3.2"
 description = "Utilities for working with Weights & Measures in Python"
-authors = ["jheddings <jheddings@gmail.com>"]
-license = "MIT"
+authors = [{ name = "jheddings", email = "jheddings@gmail.com" }]
+requires-python = ">=3.12, <4"
 readme = "README.md"
+license = "MIT"
+dependencies = ["deprecation>=2.1.0,<3"]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-deprecation = "^2.1.0"
+[dependency-groups]
+dev = [
+    "pre-commit>=4.3.0,<5",
+    "ruff>=0.13.0,<0.14",
+    "pytest>=8.4.2,<9",
+    "coverage>=7.10.6,<8",
+]
 
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^4.3.0"
-ruff = "^0.13.0"
-pytest = "^8.4.2"
-coverage = "^7.10.6"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/wxdat"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
 
 [tool.ruff]
 line-length = 88
@@ -45,7 +55,3 @@ line-ending = "auto"
 
 [tool.ruff.isort]
 known-first-party = ["wamu"]
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
