--- a/.github/workflows/pypi-publish.yaml
+++ b/.github/workflows/pypi-publish.yaml
@@ -14,7 +14,16 @@ jobs:
     steps:
       - uses: actions/checkout@v5.0.0
 
-      - name: Upload package to PyPI
-        uses: JRubics/poetry-publish@v2.1
-        with:
-          pypi_token: ${{ secrets.PYPI_TOKEN }}
+      - name: Setup uv w/ default python
+        uses: astral-sh/setup-uv@v6
+
+      - name: Install build dependencies
+        run: uv sync --all-extras
+
+      - name: Build the project
+        run: uv build
+
+      - name: Publish to PyPI
+        run: uv publish
+        env:
+          UV_PUBLISH_TOKEN: ${{ secrets.PYPI_TOKEN }}
