Corrected package source.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "wamu"
-version = "0.3.4"
+version = "0.3.5"
 description = "Utilities for working with Weights & Measures in Python"
 authors = [{ name = "jheddings", email = "jheddings@gmail.com" }]
 requires-python = ">=3.12, <4"
@@ -21,7 +21,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/wxdat"]
+packages = ["src/wamu"]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
